--- a/KewlChat/KewlChat/Base.lproj/Main.storyboard
+++ b/KewlChat/KewlChat/Base.lproj/Main.storyboard
@@ -69,16 +69,16 @@
             </objects>
             <point key="canvasLocation" x="288" y="289"/>
         </scene>
-        <!--Login Screen-->
+        <!--LoginScreen-->
         <scene sceneID="8fe-vv-a17">
             <objects>
-                <viewController id="dT1-tB-xa3" customClass="LoginScreen" customModule="KewlChat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginScreen" title="LoginScreen" id="dT1-tB-xa3" customClass="LoginScreen" customModule="KewlChat" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="aQY-6w-Sq2"/>
                         <viewControllerLayoutGuide type="bottom" id="wiZ-bA-Qkq"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="xFa-lD-q8D">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="acQ-Ro-Peb">
@@ -95,7 +95,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="126" y="206" width="149" height="30"/>
+                                    <rect key="frame" x="113" y="208" width="149" height="30"/>
                                 </variation>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zSe-3a-YJF">
@@ -103,15 +103,35 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="126" y="268" width="149" height="30"/>
+                                    <rect key="frame" x="113" y="266" width="149" height="30"/>
                                 </variation>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pim-ty-QlH">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <state key="normal" title="Login"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="181" y="349" width="38" height="30"/>
+                                    <rect key="frame" x="168" y="353" width="38" height="30"/>
                                 </variation>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gWU-95-R51">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" title="Groups"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="162" y="91" width="50" height="30"/>
+                                </variation>
+                                <connections>
+                                    <segue destination="dYI-LE-Gtn" kind="show" id="aQs-e2-auY"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="avv-lN-e4j">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" title="SingleConversation"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="121" y="139" width="133" height="30"/>
+                                </variation>
+                                <connections>
+                                    <segue destination="HgD-D7-iYZ" kind="show" id="8jq-H2-U1X"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pRo-CJ-wjY">
                                 <rect key="frame" x="-42" y="-21" width="42" height="21"/>
@@ -119,7 +139,7 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="179" y="432" width="42" height="21"/>
+                                    <rect key="frame" x="166" y="432" width="42" height="21"/>
                                 </variation>
                             </label>
                         </subviews>
@@ -130,6 +150,8 @@
                                 <exclude reference="WRm-tE-AsT"/>
                                 <exclude reference="zSe-3a-YJF"/>
                                 <exclude reference="pim-ty-QlH"/>
+                                <exclude reference="gWU-95-R51"/>
+                                <exclude reference="avv-lN-e4j"/>
                                 <exclude reference="pRo-CJ-wjY"/>
                             </mask>
                         </variation>
@@ -139,6 +161,8 @@
                                 <include reference="WRm-tE-AsT"/>
                                 <include reference="zSe-3a-YJF"/>
                                 <include reference="pim-ty-QlH"/>
+                                <include reference="gWU-95-R51"/>
+                                <include reference="avv-lN-e4j"/>
                                 <include reference="pRo-CJ-wjY"/>
                             </mask>
                         </variation>
@@ -149,23 +173,21 @@
             </objects>
             <point key="canvasLocation" x="1197" y="626"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="8rK-Jt-Qi1">
+        <!--GroupsStoryboard-->
+        <scene sceneID="qFR-rQ-CVX">
             <objects>
-                <viewController id="G7c-Vm-lNq" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="YLC-sa-s6p"/>
-                        <viewControllerLayoutGuide type="bottom" id="KTt-2W-QWy"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="6NY-0U-5tF">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="g0X-iU-jHn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="GroupsStoryboard" id="dYI-LE-Gtn" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aq5-P8-eR1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2035.5" y="626"/>
+            <point key="canvasLocation" x="1992" y="370"/>
+        </scene>
+        <!--ConversationStoryboard-->
+        <scene sceneID="gGy-3D-IbF">
+            <objects>
+                <viewControllerPlaceholder storyboardName="ConversationStoryboard" id="HgD-D7-iYZ" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JIB-54-gAP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1908.75" y="575"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="YkM-o3-IN7">
