--- a/KewlChat/KewlChat/GroupsStoryboard.storyboard
+++ b/KewlChat/KewlChat/GroupsStoryboard.storyboard
@@ -13,10 +13,10 @@
             </objects>
             <point key="canvasLocation" x="-210.75" y="-94"/>
         </scene>
-        <!--View Controller-->
+        <!--Conversation List-->
         <scene sceneID="83p-Lg-DEi">
             <objects>
-                <viewController id="Csx-Nr-ape" sceneMemberID="viewController">
+                <viewController id="Csx-Nr-ape" customClass="ConversationList" customModule="KewlChat" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="VJR-Kq-mLY"/>
                         <viewControllerLayoutGuide type="bottom" id="hKD-cJ-Em6"/>
@@ -31,7 +31,7 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="172" y="73" width="56" height="21"/>
+                                    <rect key="frame" x="172" y="29" width="56" height="21"/>
                                 </variation>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n5N-eu-K74">
@@ -44,25 +44,60 @@
                                     <segue destination="chr-bl-JVV" kind="show" id="RhJ-gp-gqJ"/>
                                 </connections>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6Tu-cf-RRQ">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="oLn-Ie-VvK" style="IBUITableViewCellStyleDefault" id="yHJ-Dg-u6E">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="yHJ-Dg-u6E" id="Sv3-Up-gCo">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="oLn-Ie-VvK">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <variation key="widthClass=compact">
+                                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    </variation>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="26" y="58" width="354" height="522"/>
+                                </variation>
+                                <connections>
+                                    <outlet property="dataSource" destination="Csx-Nr-ape" id="Gwo-cW-wrF"/>
+                                    <outlet property="delegate" destination="Csx-Nr-ape" id="8VP-SH-SGx"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="bGd-de-UHr"/>
                                 <exclude reference="n5N-eu-K74"/>
+                                <exclude reference="6Tu-cf-RRQ"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
                             <mask key="subviews">
                                 <include reference="bGd-de-UHr"/>
                                 <include reference="n5N-eu-K74"/>
+                                <include reference="6Tu-cf-RRQ"/>
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outlet property="conversationTable" destination="6Tu-cf-RRQ" id="gSI-ut-X99"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n6j-oB-6Gw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="247" y="170"/>
+            <point key="canvasLocation" x="246" y="170"/>
         </scene>
     </scenes>
 </document>
